@@ -1,0 +1,4 @@
+#!/bin/bash -e
+
+# Enable SSH daemon by default.
+touch "$ROOTFS_DIR"/boot/ssh
