@@ -8,9 +8,11 @@ Changed::
 * Enable shell and kernel messages on serial connection by default.
 * Disable `AcceptEnv LANG LC_*` in `sshd_config`.
 * Change timezone from `Etc/UTC` to `Europe/Prague`.
+* Enable SSH daemon by creating empty file `/boot/ssh` instead of running `systemctl enable ssh` during build as before.
 
 Fixed::
 * Fix name of the bc-workroom-led-strip package (it has been renamed from “bc-workroom-ledstrip” to “bc-workroom-led-strip”).
+* Remove SSH host keys from the generated image (it was an unintended side-effect of enabling SSH daemon).
 
 
 == link:{gh-url}/tree/v1.0.0[1.0.0] (2016-12-19)
